force-app/main/default/objects/Tag__c/fields/For_IdeaBoards__c.field-meta.xml
<CustomField>
    <fullName>For_IdeaBoards__c</fullName>
    <defaultValue>true</defaultValue>
    <label>For Idea Boards</label>
    <type>Checkbox</type>
</CustomField>