force-app/main/default/objects/Tag__c/fields/For_Projects__c.field-meta.xml
<CustomField>
    <fullName>For_Projects__c</fullName>
    <defaultValue>true</defaultValue>
    <label>For Projects</label>
    <type>Checkbox</type>
</CustomField>