force-app/main/default/objects/Tag__c/fields/For_ProjectTasks__c.field-meta.xml
<CustomField>
    <fullName>For_ProjectTasks__c</fullName>
    <defaultValue>true</defaultValue>
    <label>For Project Tasks</label>
    <type>Checkbox</type>
</CustomField>